[package]
name = "mushie_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
songbird = "0.3.2"
once_cell = "1.13.0"
securestore = "0.100"
thiserror = "1.0.40"

[dev-dependencies]
anyhow="1.0"
